--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,41 @@
-<div class="row" style="margin-top:200px; padding:20px; background-color:#ede9f5;border-radius:15px;
+<!-- <div class="bg" ></div> -->
+<!-- <div class="row"></div> -->
+
+
+
+
+<div class="row" style="margin-top:100px; padding:20px; background-color:#ede9f5; border-radius:15px;
 -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
 -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);">
-  <div class="col-sm-12" style="text-align:center;">
-    <h1>LOGIN</h1></div>
+box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);"> 
+<div class="col-sm-12" style="text-align: center"><h1>LOGIN</h1></div>
 
-<div class="container">
-    <div class="jumbotron">
-<form #frm="ngForm" (ngSubmit)="onLoginSubmit(frm)">
+<div class="container" style="margin:0 auto">
+<div class="jumbotron">
+<form #frm="ngForm" (ngSubmit)="addUser()" (ngSubmit)="moveToUserhome()">
  
-               <div class="form-group" >
-                 <label>Email ID:</label>
-                 <input class="form-control" type="email" value="" style=" margin-left:15px;" placeholder="abc@siemens.com" name="username" (keyup)="onEntry(loginname.value)" ngModel #loginame> 
-               </div>
-               <div class="form-group" >
-                 <br>
-                 <label>Password </label>
-                 <input class="form-control" type="password" style=" margin-left:15px;" name="password" ngModel >
-               </div>
-               <input type="submit" class="btn btn-primary btn-lg" style=" margin-top:15px;" value="Login" (click)="check()" >
-             </form>
-            </div></div>
+    <div class="form-group">
+        <label >Email ID:</label>
+        <input class="form-control" type="email"  placeholder="abc@siemens.com" name="username" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" ngModel #IDuser="ngModel" required> 
+    </div>
+    <div *ngIf="IDuser.touched" class="alert alert-danger">
+    <div *ngIf="IDuser.errors?.required">*Required Field</div>
+    <div [hidden]="!IDuser?.hasError('pattern')">Invalid Email!</div></div>
 
-            {{frm.value | json}}
+    <div class="form-group" >
+        <label>Password </label>
+        <input class="form-control" type="password" name="password" maxlength="8" minlength="8" ngModel #PWDuser="ngModel" required>
+    </div>
+    <div *ngIf="PWDuser.touched" class="alert alert-danger">
+    <div *ngIf="PWDuser.errors?.required">*Required Field</div>
+    <div [hidden]="!PWDuser?.hasError('minlength')">Invalid Password!</div>          
+  </div>
+
+    <input type="submit" class="btn btn-success" value="Login" [disabled]="frm.invalid">
+</form>
+</div> 
+</div>
+</div>
+
+
+<!-- {{frm.value | json}} -->
