--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,7 +31,7 @@ box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);">
     <div [hidden]="!PWDuser?.hasError('minlength')">Invalid Password!</div>          
   </div>
 
-    <input type="submit" class="btn btn-success" value="Login" [disabled]="frm.invalid">
+    <input type="submit" class="btn btn-success" value="Login" (click)="moveToUserhome()" [disabled]="frm.invalid">
 </form>
 </div> 
 </div>
