--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,11 @@
 
 
 
-<div class="continer-fluid">
+<!-- <div class="continer-fluid">
   <div class="row">
       <div class="col-md-6 offset-md-3">
           <router-outlet> </router-outlet>
       </div>
   </div>
-</div>
+</div> -->
+<router-outlet> </router-outlet>
