--- a/src/app/userhome/userhome.component.html
+++ b/src/app/userhome/userhome.component.html
@@ -31,7 +31,7 @@
   </div>
 
   <div class="topnav3">
-    
+    <a href="#" class="active"><i class="fa fa-home"></i></a>
     <div class="filterdropdown" >
       <button  class="filterbtn">Filter</button>
       <div class="filter-content">
