--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" >
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light" >
   <a class="navbar-brand" style="color:rgb(184, 147, 253)" href="#">Code.Siemens Dashboard</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
       aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
   </button>
   
-</nav>
+</nav> -->
 
 
 
