--- a/src/app/userhome/userhome.component.css
+++ b/src/app/userhome/userhome.component.css
@@ -1,10 +1,11 @@
 * {
     box-sizing: border-box;
+    
   }
   body {
     background-color: #f1f1f1;;
   } 
-
+ /*-------------------*/
 
 
  /*NAVIGATION BAR 1*/
@@ -36,14 +37,14 @@
 .active:hover{
         background-color:	#4B0082;
 }
-
+ /*-------------------*/
 
 
  /*NAVIGATION BAR 2*/
 .topnav2{
     padding: 10px;
     overflow: hidden;
-    background-color:purple;
+    background-color:rgb(104, 1, 104);
   }
   .topnav2 a {
     float: left;
@@ -54,9 +55,9 @@
     text-decoration: none;
   }
   .topnav2 a:hover {
-    background-color:	#4B0082;
+    background-color:	purple;
   }
-
+ /*-------------------*/
 
 
    /*SEARCH BAR*/
@@ -83,7 +84,7 @@
     form.search button:hover {
     background:  #333;
   }
-
+ /*-------------------*/
 
 
  /*USER DROPDOWN*/
@@ -103,7 +104,7 @@
     margin: 0;
   }
   .dropdown:hover .dropbtn {
-    background-color: 	#4B0082;
+    background-color: purple;
   }
     .dropdown-content {
     display: none;
@@ -130,6 +131,7 @@
       width: 100%;
     }
   }
+ /*-------------------*/
 
   /*NAVIGATION BAR 3*/
 .topnav3{
@@ -143,16 +145,24 @@
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 7px 16px;
   text-decoration: none;
 }
-.topnav3 a:hover {
+.active {
+    background-color:rgb(104, 1, 104);
+   } 
+.active:hover{
+    background-color:	purple;
+}
+/* .topnav3 a:hover {
   background-color:	#A0A0A0;
-} 
+}  */
+ /*-------------------*/
+
 
 /*FILTER DROPDOWN*/
 .filterdropdown {
-  float: left;
+  
   overflow: hidden;
 }
 
@@ -188,7 +198,6 @@
   .filter-content .fbtn:hover {
   background-color:	#333;
 } 
-
 .filter-content .fbtn.active {
   background-color: #333;
   color: white;
@@ -197,7 +206,6 @@
   .filterdropdown:hover .filter-content {
   display: block;
 }
-
 .filterDiv {
 
   background-color: rgba(139, 0, 0, 0.801);
@@ -208,16 +216,18 @@
   margin: 0;
   display: none;
 }
+
+ /*-------------------*/
 .show {
   display: block;
 }
-
+ /*-------------------*/
 
   /*GRID SYSTEM*/
     .column {
       float: left;
       width: 31.89%;
-      padding: 10px;
+      padding: 30px;
       background-color:#A8A8A8;
       margin: 8px;
     }
@@ -227,3 +237,4 @@
       clear: both;
       margin: 25 px;
     }
+      /*-------------------*/
